# cogtrans

./: .gitignore  LICENSE  README.md  pyproject.toml
cogtrans/demo/: 20260113_transformer_wordswitch.ipynb  wordsort_transformer.ipynb
cogtrans/src/: d2l_utils.py  model.py
cogtrans/studies/: word_embedding.ipynb
