[project]
name = "cogtrans"
version = "0.1.0"
description = "transformers for cognitive and neuroscience tasks"
authors = [
    {name = "dlhocker",email = "dlhocker@gmail.com"}
]
license = "MIT"
readme = "README.md"
requires-python = ">=3.11,<3.15"
dependencies = [
    "torch (>=2.11.0,<3.0.0)",
    "scipy (>=1.17.1,<2.0.0)",
    "pandas (>=3.0.2,<4.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
