[project]
name = "cogtrans"
version = "0.1.0"
description = "transformers for cognitive and neuroscience tasks"
authors = [
    {name = "dlhocker",email = "dlhocker@gmail.com"}
]
license = "MIT"
readme = "README.md"
requires-python = ">=3.11,<3.15"


dependencies  = [
    "torch (>=2.11.0,<3.0.0)",
    "scipy (>=1.10.1,<2.0.0)",
    "pandas (>=2.0.3,<4.0.0)",
    "scikit-learn (>=1.8.0,<2.0.0)",
    "lightning (>=2.6.1,<3.0.0)",
    "clearml (>=2.1.6,<3.0.0)",
    "ipykernel (>=7.2.0,<8.0.0)",
    "jupyter (>=1.1.1,<2.0.0)",
    "matplotlib (>=3.7.2,<4.0.0)"
]




[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
